--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db_peticionespost_user:9bjxTPYzCapLdJpkLPrBHXKVXbxRjoSU@dpg-cvqjeungi27c73emsl70-a.oregon-postgres.render.com/db_peticionespost
+spring.datasource.url=jdbc:postgresql://db_peticionespost_user:9bjxTPYzCapLdJpkLPrBHXKVXbxRjoSU@dpg-cvqjeungi27c73emsl70-a/db_peticionespost
 spring.datasource.username=db_peticionespost_user
 spring.datasource.password=9bjxTPYzCapLdJpkLPrBHXKVXbxRjoSU
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
