--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,8 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db_peticionespost_user:9bjxTPYzCapLdJpkLPrBHXKVXbxRjoSU@dpg-cvqjeungi27c73emsl70-a/db_peticionespost
-spring.datasource.username=db_peticionespost_user
-spring.datasource.password=9bjxTPYzCapLdJpkLPrBHXKVXbxRjoSU
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 logging.level.org.hibernate=ERROR
-server.port=8085
